@@ -22,7 +22,11 @@ Changelog for 1.3.6 [WIP]
 -Added a blink effect at speedrun timer on level/episode completion (@Wohlstand)
 -Added an in-game editor based on the original game's editor code (requires EditorIcons.png asset) (@ds-sloth)
 -Added support for different display resolutions (@ds-sloth)
+-Added compat setting to choose when NPCs activate, based on both the screen size and the episode's original screen size (@ds-sloth)
+-Added setting to make the HUD follow the player when the screen is larger than the episode's original screen size (@ds-sloth)
 -Fix vanilla peculiarity in which an event resetting section boundaries does not trigger the same checks as an event setting section boundaries. (@ds-sloth)
+-Added optional backdrop for levels smaller than the screen at graphics/ui/Backdrop.png (@ds-sloth)
+-Added alternative format for world map frame with better support for various display resolutions (@ds-sloth)
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
